# coolgpus_2026

./: .gitignore  coolgpus  coolgpus.service  pyproject.toml  readme.md  test_gpu1.py
docs/superpowers/plans/: 2026-03-12-coolgpus-modernization.md
src/coolgpus/: __main__.py  cli.py  core.py  nvidia.py  xserver.py
tests/: test_core.py
