[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "coolgpus"
version = "1.0.0"
description = "GPU fan control for headless Linux"
readme = "readme.md"
license = "MIT"
requires-python = ">=3.10"

[project.scripts]
coolgpus = "coolgpus.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
